Add a full_title helper

--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Contact') %>
-<h1>Contact</h1>
+<h1>Contact content that shouldn't be here</h1>
 <p>
     Contact Ruby on Rails Tutorial about the sample app at the <a href="http://railstutorial.org/contact">contact page</a>.  Or contact me at <a href="mailto:bluhme3@gmail.com?Subject=About%20the%20Sample%20App">bluhme3@gmail.com</a>.
 </p>
