--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -109,6 +109,56 @@ footer {
     }
 }
 
+/* sidebar */
+aside {
+    section {
+        padding: 10px 0;
+        border-top: 1px solid $grayLighter;
+        &:first-child {
+            border: 0;
+            padding-top: 0;
+        }
+        span {
+            display: block;
+            margin-bottom: 3px;
+            line-height: 1;
+        }
+        h1 {
+            font-size: 1.4em;
+            text-align: left;
+            letter-spacing: -1px;
+            margin-bottom: 3px;
+            margin-top: 0px;
+        }
+    }
+}
+
+/* forms */
+
+input, textarea, select, .uneditable-input {
+    border: 1px solid #bbb;
+    width: 100%;
+    margin-bottom: 15px;
+    @include box_sizing;
+}
+
+input {
+    height: auto !important;
+}
+
+#error_explanation {
+    color: #f00;
+    ul {
+        list-style: none;
+        margin: 0 0 18px 0;
+    }
+}
+
+.field_with_errors {
+    @extend .control_group;
+    @extend .error;
+}
+
 /* miscellaneous */
 
 .debug_dump {
@@ -117,6 +167,11 @@ footer {
     width: 100%;
     margin-top: 45px;
     @include box_sizing;
+}
+
+.gravatar {
+    float: left;
+    margin-right: 10px;
 }
 
 
