Finish user edit, update, index, and destroy actions

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,6 @@
 <footer class="footer">
     <small>
-        <a href = "http://railstutorial.org/">Rails Tutorial</a>
-        by Michael Hartl
+        A sample website from <a href="http://github.com/PeppyHare/">PeppyHare
     </small>
     <nav>
         <ul>
