--- a/app/views/shared/_static_home.html.erb
+++ b/app/views/shared/_static_home.html.erb
@@ -1,5 +1,5 @@
 <div class="center hero-unit">
-  <h1>Welcome to the Wobsite</h1>
+  <h1>Welcome to the Fierce Lake</h1>
   <%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/'  %>
   <h2>
     Here you can find some cool things (in the future (hopefully))
