--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -1,6 +1,6 @@
 <%= link_to gravatar_for(current_user, size: 53), current_user %>
 <h1>
-	<%= current_user.name %>
+	<%= link_to current_user.name, current_user %>
 </h1>
 <span>
 	<% link_to "view my profile", current_user %>
