--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,21 +1,27 @@
 <% provide(:title, @user.name) %>
 <div class = "row">
-    <aside class="span4">
-        <section>
-            <h1>
-            <%= gravatar_for @user %>
-            <%= @user.name %>
-            </h1>
-            <%= @user.email %>
-        </section> 
-    </aside>
-    <div class="span8">
-    	<% if @user.microposts.any? %>
-    	<h3>Microposts (<%= @user.microposts.count %>)</h3>
-    	<ol class="microposts">
-    		<%= render @microposts %>
-    	</ol>
-    	<%= will_paginate @microposts %>
-    	<% end %>
-    </div> 
+  <aside class="span4">
+    <section>
+      <h1>
+      <%= gravatar_for @user %>
+      <%= link_to @user.name, @user %>
+      </h1>
+      <%= @user.email %>
+    </section> 
+    <section>
+    	<%= render 'shared/stats' %>
+    </section>
+    <section>
+    	<%= render 'follow_form' if signed_in? %>
+    </section>
+  </aside>
+  <div class="span8">
+  	<% if @user.microposts.any? %>
+  	<h3>Microposts (<%= @user.microposts.count %>)</h3>
+  	<ol class="microposts">
+  		<%= render @microposts %>
+  	</ol>
+  	<%= will_paginate @microposts %>
+  	<% end %>
+  </div> 
 </div>
